added entities for storing likes and comments, as well as endpoints of the same name